Overview of changes from 1.6.0-alpha to 1.6.0-beta
=============================================
* Fixes
  - Fix crash in some cases when generic-show-prediction-candidates?
    is #f.


Overview of changes from 1.5.x to 1.6.0-alpha
=============================================
* New features
  - uim-social-ime (new IM)
    A web based Japanese multi-segment input method

  - uim-ajax-ime (new IM)
    A web based Japanese single-segment input method

  - uim-yahoo-jp (new IM)
    A web based Japanese multi-segment input method

  - Generic IM
    - Add Wubi86 and Zhengma tables
    
  - uim-annotation
    Annotation system

  - generic-predict
    Generic completion input support in Japanese multi-segment IMs
    (used in AjaxIME, Canna, SJ3, Social-IME, Wnn, Yahoo-JP).

  - Qt4 bridge
    * --enable-qt4-qt3support option
    * Support for preedit color configuration
    * A caret state indicator

  - Qt4 bridge
  - Gtk+ bridge
  - uim-candwin-tbl-gtk
    * Table style candidate window

* Enhancements
  - uim-elatin
    * LaTeX-like rules
    * preedit completion

  - Japanese multi-segment IMs
    * Support ACT and KZIK input rules
    * Support user configuration to keep unmatched consonant characters
      in Romaji input

  - Generic IM
    * Add an option to show input prediction with expected key sequences

  - uim-im-switcher
    * Don't run multiple switcher instances in a desktop (#2112)

  - uim-tutcode
    * Register/purge entry in Mazegaki dictionary
    * Alphabet conversion (SKK abbrev) mode
    * Virtual keyboard help
    * Auto help
    * Add kanji to kigoudic

  - uim-trycode
    * Updated the composition table to 2010-04-27 version

* Fixes
  - Qt4 bridge
    * Fix bug: Unwanted IM reset on focus-out of Qt4 immodule (#13910)
    * Fix bug: Candidate window does not follow main window move (#13911)

  - uim-toolbar-gtk-systray
    * Fix transparent and pixmap background with latest gnome-panel (#28999)

* Others